--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "db:seeds": "sequelize-cli db:seed:all"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
