--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
+    "pino": "^6.11.3",
+    "pino-pretty": "^5.1.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
