--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -4,8 +4,12 @@
         "commonjs": true,
         "es2021": true
     },
+    "plugins": [
+        "security"
+    ],
     "extends": [
-        "google"
+        "google",
+        "plugin:security/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 12
