--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "eslint": "^7.25.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-security": "^1.4.0",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
