--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tems-backend",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "description": "Travel Expenses Management System backend with NodeJS",
   "main": "app.js",
   "author": "Manuel Antonio Rojas Ramos",
@@ -21,11 +21,14 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "openapi-types": "^9.0.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "pino": "^6.11.3",
     "pino-pretty": "^5.1.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
