--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -4,12 +4,8 @@
         "commonjs": true,
         "es2021": true
     },
-    "plugins": [
-        "security"
-    ],
     "extends": [
-        "google",
-        "plugin:security/recommended"
+        "google"
     ],
     "parserOptions": {
         "ecmaVersion": 12
